--- a/lab-06.Rmd
+++ b/lab-06.Rmd
@@ -29,8 +29,28 @@ diamonds <- diamonds %>% rename(
 ```{r}
 # Do some preliminary investigations & cleaning
 
+diamonds %>%
+  summary()
 
+diamonds_clean <- diamonds %>%
+  filter(length_mm > 0,
+         width_mm > 0,
+         depth_mm > 0
+  ) %>%
+  mutate(
+    volume = length_mm*width_mm*depth_mm
+  )
 
+diamonds_clean %>%
+  filter(
+    volume < 800
+  ) %>%
+  ggplot(mapping = aes(
+    x = volume,
+    y = price
+  )) +
+  geom_point()+
+  geom_smooth()
 
 ```
 
@@ -43,7 +63,10 @@ diamonds <- diamonds %>%
   mutate(table_mm = table_pct * width_mm / 100)
 
 # Overall table_mm arithmetic mean?
-
+diamonds %>%
+  summarise(
+    av_table = mean(table_mm)
+  )
 
 
 
@@ -51,14 +74,18 @@ diamonds <- diamonds %>%
 
 # table_mm arithmetic mean within each clarity category
 
-
+diamonds %>%
+  group_by(clarity) %>%
+  summarise(
+    av_table = mean(table_mm)
+  )
 
 
 
 
 ```
 
-_Add your comment here_
+_As the clarity of the diamonds gets better the average table length decreases_
 
 ```{r}
 # calculate the arithmetic mean across all numeric variables
